--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,9 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.7.0
-torchvision>=0.8.1
+torch==1.7.1+cu101
+torchaudio==0.7.2
+torchvision==0.8.2+cu101
 tqdm>=4.41.0
 pandas>=1.1.4
 seaborn>=0.11.0
