--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
-# pip install -r requirements.txt
+## first run the following command (requires anaconda environment)
+# conda install -c conda-forge tensorflow-gpu=1.15
+
+# pip install -r requirements.txt -f https://download.pytorch.org/whl/cu102/torch_stable.html
 
 scikit-learn
-tensorflow-gpu==1.15
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.2
-Pillow>=7.1.2
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
-torch==1.7.1+cu101
-torchaudio==0.7.2
-torchvision==0.8.2+cu101
-tqdm>=4.41.0
-pandas>=1.1.4
-seaborn>=0.11.0
+matplotlib
+numpy
+opencv-python
+Pillow
+PyYAML
+requests
+scipy
+torch==1.10.2+cu102
+torchvision==0.11.3+cu102
+torchaudio===0.10.2+cu102
+tqdm
+pandas
+seaborn
 easydict
 moviepy
